crates/ruff_python_formatter/tests/snapshots/format@empty.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/empty.py
---
## Input
```py
```

## Output
```py
```



