crates/ruff_python_formatter/tests/snapshots/format@empty_multiple_trailing_newlines.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/empty_multiple_trailing_newlines.py
---
## Input
```python



```

## Output
```python
```



