crates/ruff_python_formatter/tests/snapshots/format@empty_trailing_newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/empty_trailing_newline.py
---
## Input
```python

```

## Output
```python
```



