crates/ruff_python_formatter/tests/snapshots/format@empty_whitespace.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
    ```

## Output
```python
```
