crates/ruff_python_formatter/tests/snapshots/format@f-string-carriage-return-newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/f-string-carriage-return-newline.py
---
## Input
```python
# Regression test for https://github.com/astral-sh/ruff/issues/18667
f"{
1=
}"

t"{
1=
}"
```

## Output
```python
# Regression test for https://github.com/astral-sh/ruff/issues/18667
f"{
1=
}"

t"{
1=
}"
```


## Unsupported Syntax Errors
error[invalid-syntax]: Cannot use t-strings on Python 3.10 (syntax was added in Python 3.14)
 --> f-string-carriage-return-newline.py:6:1
  |
4 |   }"
5 |
6 | / t"{
7 | | 1=
8 | | }"
  | |__^
  |
