crates/ruff_python_formatter/tests/snapshots/format@form_feed.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
# Regression test for: https://github.com/astral-sh/ruff/issues/7624
if symbol is not None:
    request["market"] = market["id"]
      #             "remaining_volume": "0.0",
else:
    pass
```

## Output
```python
# Regression test for: https://github.com/astral-sh/ruff/issues/7624
if symbol is not None:
    request["market"] = market["id"]
    #             "remaining_volume": "0.0",
else:
    pass
```
